syntax = "proto3";

package weixin;

// repeated 修饰符表示字段是可变数组，即 slice 类型
service Weixin {
    rpc WeixinLogin (RequestWeixinLogin) returns (ResponseWeixinLogin);
    rpc WeixinLogout (RequestWeixinLogout) returns (ResponseWeixinLogout);
}


// weixin login
message RequestWeixinLogin {
    string appid = 1;   // 小程序唯一标识
    string secret = 2;  // 小程序的 app secret
    string js_code = 3; // 登录时获取的 code
    string grant_type = 4;  // 填写为 authorization_code
}

message ResponseWeixinLogin {
    string openid = 1;  // 用户唯一标识
    string session_key = 2; // 会话密钥
    string unionid = 3; // 用户在开放平台的唯一标识符
}

// weixin logout
message RequestWeixinLogout {
    string userId = 1;
}

message ResponseWeixinLogout {
    string data = 1;
}


